2015-06-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22669 by Michael Wiegand.

	* doc/i18n-howto.txt: Remove duplicate "the".

2015-06-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (result [result-headers]): Correct contexts
	for "Vulnerability" and "Solution type".

2015-06-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22672.

	* src/html/classic/omp.xsl (result [result-body]): Correct context of
	"Result".

2015-06-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22667.

	* doc/i18n-howto.txt: Rewrite to describe new gettext based format.

	* src/html/classic/dynamic_strings.xsl (type-bulk-delete-confirm)
	(type-bulk-trash-confirm): Correct singular of Tag and Permission
	message.

	* src/html/classic/omp.xsl (resume-icon, task-icons): Change context of
	"Resume" to "Action Verb" for consistency.
	(task [details], new_task, html-tasks-table): Change context of
	"Sequential", "Random" and "Reverse" to "Task|Hosts Ordering" to
	clarify. Change context of "Current" and "Last" to "Task|Report".
	(report [apps]): Consolidate tooltip text for unknown installations
	count with gsa-i18n:strformat and use gsa:n-i18n.
	(report [summary]): Use correct context "Results" for "Total".
	(html-tasks-trash-table): Change context of "First" and "Last" to
	"Task|Report".

	* src/po/gsad_xsl-de.po: Update to include new messages and contexts.
	Remove unused messages.

2015-06-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22660. Not including the "builtin scanner" messages and a
	"Note cannot be moved to trashcan" one in omp.xsl.

	Correct various strings for i18n and add i18n for some text lacking it.

	* src/html/classic/dynamic_strings.xsl: Use correct closing tags
	for templates and add ending </xsl:stylesheet>. Correct template name
	to type-name-plural for plural type nams.
	(type-name, type-name-plural, type-global): Add messages for "Config"
	and "Scan Configuration".